--- a/.github/workflows/ishares.yaml
+++ b/.github/workflows/ishares.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   scheduled:
     runs-on: ubuntu-latest
-    container: riazarbi/datasci-quant:latest
+    container: riazarbi/datasci-quant:focal
     steps:
       - name: Check out this repo
         uses: actions/checkout@v3
