--- a/.github/workflows/ishares.yaml
+++ b/.github/workflows/ishares.yaml
@@ -8,8 +8,10 @@ on:
 jobs:
   scheduled:
     runs-on: ubuntu-latest
-    container: riazarbi/datasci-quant:focal
-    steps:
+    container: 
+      image: riazarbi/datasci-quant:focal
+      options: --user root
+      steps:
       - name: Check out this repo
         uses: actions/checkout@v3
       - name: Save ishares data
