--- a/.github/workflows/ishares.yaml
+++ b/.github/workflows/ishares.yaml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Check out this repo
         uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
       - name: Save ishares data
         run: |-
           Rscript ishares.R
