--- a/.github/workflows/ishares.yaml
+++ b/.github/workflows/ishares.yaml
@@ -12,10 +12,13 @@ jobs:
       image: riazarbi/datasci-quant:focal
       options: --user root
     steps:
+      - name: upgrade git
+        run: |
+          apt-get update
+          apt-get install -y git          
+          git --version
       - name: Check out this repo
         uses: actions/checkout@v3
-          with:
-            fetch-depth: 0
       - name: Save ishares data
         run: |-
           Rscript ishares.R
