--- a/.github/workflows/tidyquant.yaml
+++ b/.github/workflows/tidyquant.yaml
@@ -8,12 +8,15 @@ on:
 jobs:
   scheduled:
     runs-on: ubuntu-latest
-    container: 
-      image: riazarbi/datasci-quant:focal
-      options: --user root
     steps:
       - name: Check out this repo
         uses: actions/checkout@v3
+        with: 
+          fetch-depth: 0
+      - name: Set up R
+        uses: r-lib/actions/setup-r@v2
+      - name: Set up R env
+        uses: r-lib/actions/setup-renv@v2
       - name: Save tidyquant data
         run: |-
           Rscript tidyquant.R
