--- a/.github/workflows/tidyquant.yaml
+++ b/.github/workflows/tidyquant.yaml
@@ -15,8 +15,18 @@ jobs:
           fetch-depth: 0
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
-      - name: Set up R env
-        uses: r-lib/actions/setup-renv@v2
+      - name: Set up R packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::WikipediR
+            any::rvest
+            any::arrow
+            any::dplyr
+            any::lubridate
+            any::tidyquant
+            any::httr
+            any::data.table
       - name: Save tidyquant data
         run: |-
           Rscript tidyquant.R
