--- a/.github/workflows/ishares.yaml
+++ b/.github/workflows/ishares.yaml
@@ -13,7 +13,9 @@ jobs:
       options: --user root
     steps:
       - name: Check out this repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Save ishares data
         run: |-
           Rscript ishares.R
