--- a/.github/workflows/ishares.yaml
+++ b/.github/workflows/ishares.yaml
@@ -21,6 +21,7 @@ jobs:
           Rscript ishares.R
       - name: Commit and push if it changed
         run: |-
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add -A
