--- a/.github/workflows/tidyquant.yaml
+++ b/.github/workflows/tidyquant.yaml
@@ -11,27 +11,14 @@ jobs:
     steps:
       - name: Check out this repo
         uses: actions/checkout@v3
-        with: 
-          fetch-depth: 0
-      - name: Set up R
-        uses: r-lib/actions/setup-r@v2
-      - name: Set up R packages
-        uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: |
-            any::WikipediR
-            any::rvest
-            any::arrow
-            any::dplyr
-            any::lubridate
-            any::tidyquant
-            any::httr
-            any::data.table
+          fetch-depth: 1
       - name: Save tidyquant data
         run: |-
           Rscript tidyquant.R
       - name: Commit and push if it changed
         run: |-
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add -A
