--- a/.github/workflows/wikipedia2.yaml
+++ b/.github/workflows/wikipedia2.yaml
@@ -14,11 +14,14 @@ jobs:
     steps:
       - name: Check out this repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
       - name: Fetch latest data
         run: |-
           Rscript wikipedia.R
       - name: Commit and push if it changed
         run: |-
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
           git config user.name "Automated"
           git config user.email "actions@users.noreply.github.com"
           git add -A
