--- a/.github/workflows/tidyquant.yaml
+++ b/.github/workflows/tidyquant.yaml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     container: 
       image: riazarbi/datasci-quant:focal
+      options: --user root
     steps:
       - name: Check out this repo
         uses: actions/checkout@v3
